# cuda-convnet2.torch

./: .gitignore  CMakeLists.txt  Jacobian.lua  LocalSpatialConvolution.lua  README.md  SpatialAvgPooling.lua  SpatialContrastNormalization.lua  SpatialConvolution.lua  SpatialConvolutionLocal.lua  SpatialCrossMaxPooling.lua  SpatialCrossResponseNormalization.lua  SpatialMaxPooling.lua  SpatialResizeBilinear.lua  SpatialResponseNormalization.lua  bias_kernels.cu  ccn2-scm-1.rockspec  env.lua  ffi.lua  init.lua  utils.lua
cuda_helpers/: helper_cuda.h  helper_cuda_drvapi.h
cudaconv3/: Makefile  build.sh
cudaconv3/include/: conv_util.cuh  cudaconv2.cuh
cudaconv3/src/: conv_util.cu  filter_acts.cu  img_acts.cu  weight_acts.cu
example/: README.md  load_imagenet.lua  test.lua
examples/: README.md  load_imagenet.lua  save_caffe_weights.m  test.lua
nvmatrix/include/: nvmatrix_kernels.cuh
test/: benchmark.lua  jac_test.lua  test.lua  test_jacobian.lua  train.lua
